--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,7 @@ knitr::opts_chunk$set(
 [![Travis build status](https://travis-ci.com/asshah4/marksman.svg?branch=main)](https://travis-ci.com/asshah4/marksman)
 [![Github commit frequency](https://img.shields.io/github/commit-activity/w/asshah4/marksman)](https://github.com/asshah4/marksman/graphs/commit-activity)
 [![Codecov test coverage](https://codecov.io/gh/asshah4/marksman/branch/main/graph/badge.svg)](https://codecov.io/gh/asshah4/marksman?branch=main)
+[![Travis build status](https://travis-ci.com/asshah4/marksman.svg?branch=master)](https://travis-ci.com/asshah4/marksman)
 <!-- badges: end -->
 
 The goal of `marksman` is to help organize data, hypotheses, and analyses during research forays, providing a strategic and smart approach at hitting the target of research questions. 
