--- a/vignettes/octomod.Rmd
+++ b/vignettes/octomod.Rmd
@@ -22,4 +22,4 @@ library(octomod)
 
 In supervised learning research projects, particularly those with multiple outcomes, the number of models and tests that are performed can become quite lengthy. The `octomod` package tries to tackle this by providing hypothesis organization.
 
-By specifying at the beginning how a model or test should be setup, it becomes much easier.
+By specifying at the beginning how a model or test should be setup, it becomes easier to implement the overall plan.
