--- a/README.Rmd
+++ b/README.Rmd
@@ -35,45 +35,44 @@ Forgive the misdirected creativity, but as the metaphor seemed to hold true, the
 
 ## Usage
 
-The package is very simple to use. First, lets load the basic packages. The two hypotheses in this case are a linear model, and a paired t-test. The `iris` dataset will serve as the example.
+The package is simple to use. First, lets load the basic packages. The two hypotheses in this case are a linear model, and a paired t-test. The `iris` dataset will serve as the example.
 
 You can see that `parsnip` is used, as this allows **many** model specifications to be called in a very similar manner, making modeling much easier.
 
 ```{r}
 library(magrittr)
 library(parsnip)
-lm_mod <- linear_reg() %>% set_engine("lm")
 ```
 
 To use the `octomod`, simply initialize the structure and add data. The steps are:
 
 1.  Create the `octomod`
-2.  Add the core or central data that the hypotheses revolve around using `add_core()`
-3.  Add the specific hypothetical arms with `add_arm()`
-4.  Equip or outfit each arm with the appropriate test results with `add_outfit()`
+2.  Add the core or central data that the hypotheses revolve around using `core()`
+3.  Add the specific hypothetical arms with `arm()`
+4.  Equip or outfit each arm with the appropriate test results with `equip()`
 
 ```{r}
 library(octomod)
 om <-
   octomod() %>%
-  add_core(iris) %>%
-  add_arm(
+  core(iris) %>%
+  arm(
     title = "t_test",
-    f = Sepal.Length + Sepal.Width ~ Petal.Length,
+    plan = Sepal.Length + Sepal.Width ~ Petal.Length,
     pattern = "direct",
     approach = "t.test",
     paired = TRUE
   ) %>%
-  add_arm(
+  arm(
     title = "linear",
-    f = Petal.Width ~ Sepal.Length + Sepal.Width + Petal.Length,
+    plan = Petal.Width ~ Sepal.Length + Sepal.Width + Petal.Length,
     pattern = "sequential",
-    approach = lm_mod
+    approach = linear_reg() %>% set_engine("lm")
   ) %>%
 	equip()
 
 # Showcase the findings
-om$outfit
+om$equipment
 ```
 
 The functions are relatively simple, but the ability to specify **how** the relationship between outcomes and exposures should be built is quite powerful. It allows a different combination of hypothesis-based formulas to be built, and allows for multiple outcomes to specified (a feature not yet built into other modeling packages). Please see the vignettes for a more thorough breakdown!
