--- a/vignettes/development.Rmd
+++ b/vignettes/development.Rmd
@@ -42,9 +42,19 @@ As minimally-experienced programmer, I used examples of current effective packag
 
 The features that I found missing in these was the ability to handle a variety of formulas that had specific pre-defined hypotheses, and the focus had been to *compare* or *combine* models, instead of considering the focus on causality. Essentially, I wanted a more epidemiological approach. The *easystats* archetype of R "monsters" was partially the idea for the working name of **{octomod}**. I started writing this after reading [this blogpost](https://blog.simonpcouch.com/blog/dev-docs-p1/) on development of a package. 
 
+# On Names
+
+The project name has gone through many iterations. The reason why the name was important is that the correct *metaphor* helps the planning process, providing a schema for understanding. [Metaphors We Live By](https://en.wikipedia.org/wiki/Metaphors_We_Live_By) by Lakoff was fundamental in this understanding for me.
+
+| Project Name | Reasoning |
+| --- | --- |
+| {marksman} | The first draft included the concept of "specific aims". This research concept is from grant writing, where the first page of a project contains the specific hypotheses that will be explored. Thus, one could *load*, *aim*, and *fire* and specific targets. The problem with this was it seemed to deterministic, as exploration was a crucial component. |
+| {octomod} | The second draft took inspiration from the idea of an *octopus*, with 8 arms or legs all surrounded a central idea. This allowed for flexibility in that the many arms of a project were not necessarily hierarchical. However, theming a project after a cephalopod does make the function names less easy to remember. |
+| {aim} | Another consideration was to go back to the original concept of specific aims. Each project would be initialized, different study arms would be added, and then the corresponding models could be built. This seems more user-friendly in terms of nosological considerations. | 
+
 # Defining the API
 
-## Current approach
+## Current Draft
 
 I've currently defined the basic functions as below:
 
@@ -57,8 +67,103 @@ The benefits of this are I can flexibly change the core data, give specific form
 
 The problems are that "changing" the central dataset is dangerous, the structure doesn't hold together afterwards, and fitting the data may break older models.
 
-## Alternative approach
+## Second Draft
 
-There should be a core function that establishes the underlying structure. `octomod()` is the current, and likely a safe bet to continue. The question is if it should contain data inside it as a requirement for definition.
+### Core Functions
 
+As described, the name helps to determine the function's purpose. The core functions represent the major user-facing features. They also help to identify the underlying structure needed to store the data collected.
+
+- `project()` initializes a structure that holds and can retain information about the individual project aims or study arms
+- `set_data()` attaches a specific data frame to the `project` object
+- `add_arm()` creates a hypothesis-driven series of tests around a formula, and allows for multiple tests to be described simultaneously (e.g. sequential addition of covariates)
+- `build_models()` runs the tests, whether it is basic statistics or more complex inferential models, with the capacity to update only the newly added arms
+- `collect_findings()` recalls information from the `project` structure in a flexible way
+
+**Defining the Structure**
+
+There should be a core function that establishes the underlying structure. Should the data be given at this time, or added in a separate function? Initialization should likely be a list structure due to its malleability.
+
+```{r, eval=FALSE}
+project()
+```
+
+**Data Sets**
+
+It seems that it should be a specific, but necessary, step to add data. The data structure, hopefully **tidy**, would provide the parameters by column names. It may allow for creating more effective selection commands as well.
+
+```{r, eval=FALSE}
+set_data(
+  data = NULL,
+  ...
+)
+```
+
+**Adding Hypotheses**
+
+This is probably the most important feature. A function such as `add_arm()` could help to stack on different potential tests. 
+
+The complex part of this is that each *arm* would allow for variations of a hypothesis formula. Multiple predictors, multiple outcomes. In an epidemiological sense, its important that certain predictors are maintained as *exposures*. Each hypothesis thus needs to allow flexibility for the complexity of a model formula.
+
+- Unique name for each arm, to be "pulled" later on
+- A global formula or plan to be specified, and potentially varied or recombined (e.g. different "patterns" of combinations based on the testing strategy). It would be helpful to label certain variables as fixed exposures in some way as well.
+- The type of "test" that is being used. This should likely draw from a common system, such as `parsnip`, to have consistent model representations. The other aspect would be more straightforward testing, such as from the `stats` base package.
+- Subgroups of the data should be allowed to be analyzed via this as well. This is such a common pattern that it should likely be defined as a specific parameter.
+
+```{r, eval=FALSE}
+add_arm(
+  title = "first_example",
+  description = NULL,
+  plan = outcome ~ exposure + covariate,
+  exposure = "exposure",
+  pattern = "parallel",
+  test = linear_reg() %>% set_engine("lm"),
+  ...
+)
+```
+
+**Running Tests**
+
+The ability to then run tests would be the next logical step. This capacity should allow for identifying if tests have already been run or not, and only run newly added components. 
+
+```{r, eval=FALSE}
+build_models(
+  run_all = FALSE,
+  which_tests = NULL,
+  ...
+)
+```
+
+**Data Extraction**
+
+The final structure of the project should be flexible in terms of extracting or pulling data. Its imagined as a list structure, and thus components could be called by the `$` operator. That depends on quality of names, and making sure they are well described. 
+
+```{r, eval=FALSE}
+collect_findings(
+  which_tests = NULL,
+  ...
+)
+```
+
+This is an important and difficult process of deciding how the user should be able to visualize information and extract findings. This will end up including `summary()` and `print()` functions as well.
+
+### Project Structure
+
+The overall project structure requires a specific *class* that will contain a pattern of an internal structure. The `project` object should hold:
+
+- a space to hold the data set
+- a *tidy* table that holds each `arm` as a separate row, containing columns for the title, formula combinations, modifiers/options, description, and build/run status
+- a corresponding *tidy* table that holds the results of each `arm` after it has been run
+
+### Supporting Functions
+
+The most complex part of this is handling formulas. Each formula given has the option to be expanded in a number of patterns. Each pattern should represent an epidemiology approach to model building (e.g. each model is informative, even if it is insignificant). 
+
+```{r, eval=FALSE}
+make_formulas(
+  formulas = y ~ x1 + x2 + x3,
+  combination = "parallel",
+  exposures = NULL,
+  ...
+)
+```
 
