started the framework class and hypothesis class

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,15 +13,15 @@ knitr::opts_chunk$set(
 )
 ```
 
-# framework
+# aims
 
 <!-- badges: start -->
 
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental) [![Github commit frequency](https://img.shields.io/github/commit-activity/w/asshah4/framework)](https://github.com/asshah4/framework/graphs/commit-activity) [![R-CMD-check](https://github.com/asshah4/framework/workflows/R-CMD-check/badge.svg)](https://github.com/asshah4/framework/actions)
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental) [![Github commit frequency](https://img.shields.io/github/commit-activity/w/asshah4/aims)](https://github.com/asshah4/aims/graphs/commit-activity) [![R-CMD-check](https://github.com/asshah4/aims/workflows/R-CMD-check/badge.svg)](https://github.com/asshah4/aims/actions)
 
 <!-- badges: end -->
 
 ## Usage
 
-The package is simple to use. First, lets load the basic packages. The two hypotheses in this case are a linear model, and a paired t-test. The `iris` dataset will serve as the example.
+The package is simple to use. First, lets load the basic packages. The two hypotheses in this case are a linear model, and a paired t-test. The `mtcars` dataset will serve as the example.
 
