changed name... again

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,11 +13,11 @@ knitr::opts_chunk$set(
 )
 ```
 
-# empath
+# dagger
 
 <!-- badges: start -->
 
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental) [![Github commit frequency](https://img.shields.io/github/commit-activity/w/asshah4/empath)](https://github.com/asshah4/empath/graphs/commit-activity) [![R-CMD-check](https://github.com/asshah4/empath/workflows/R-CMD-check/badge.svg)](https://github.com/asshah4/empath/actions)
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental) [![Github commit frequency](https://img.shields.io/github/commit-activity/w/asshah4/dagger)](https://github.com/asshah4/dagger/graphs/commit-activity) [![R-CMD-check](https://github.com/asshah4/dagger/workflows/R-CMD-check/badge.svg)](https://github.com/asshah4/dagger/actions)
 
 <!-- badges: end -->
 
