--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,78 @@ knitr::opts_chunk$set(
 
 <!-- badges: end -->
 
+## Introduction
+
+The `dagger` package is intended to help build causal models with an underlying focus of **directed acylcic graphs**. However, instead of starting purely from a diagram, this package intends to allow modeling to occur simultaneously, and then leveraging the patterns within the data to help cut away *confounders* and other terms for a more parsimonious causal model. The premise is that there are two components in studying causality:
+
+1. Causal model diagrams
+1. Hypothesis testing and statistical analysis
+
+These two components are reflected within the primary functions of the package, and are built to help refine and modulate hypotheses as the study develops. The underlying data structure is the concept of a **map** that has multiple paths describing variable relationships, however they may exist in different **layers** on the map.  
+
 ## Usage
 
-The package is simple to use. First, lets load the basic packages. The two hypotheses in this case are a linear model, and a paired t-test. The `mtcars` dataset will serve as the example.
+The package is simple to use. First, lets load the basic packages. The `mtcars` dataset will serve as the example, and we will use linear regressions as the primary test.
+
+```{r}
+library(dagger)
+library(parsnip)
+```
+
+The basic function of the package is the `study()` argument, which creates a empty data structure object.
+
+```{r}
+study()
+```
+
+This is accompanied by `hypothesis` objects, which are essentially modified `formula` objects that allow for a better understanding of variable relationships. We create two objects below, which have not yet been analyzed yet.
+
+```{r}
+h1 <-
+	hypothesize(
+		mpg ~ X(wt) + hp + disp,
+		combination = "sequential",
+		test = linear_reg() %>% set_engine("lm"),
+		data = mtcars,
+	)
+
+h2 <- update_hypothesis(h1, combination = "sequential")
+
+# Print h1
+h1
+
+# Print h2
+h2
+```
+
+These hypotheses can then be *drawn* on to the *study map* as below.
+
+```{r}
+m1 <-
+	study() %>%
+	draw_hypothesis(h1) %>%
+	draw_hypothesis(h2) 
+
+# Print study
+m1
+```
+
+Subsequently, we can fit the models and add the paths that were required. The **paths** can be utilized to help create the appropriate causal diagrams. The `construct_*()` functions can be used in any order or selectively. 
+
+```{r}
+m2 <-
+	m1 %>%
+	construct_paths() %>%
+	construct_models()
+
+# Print analyzed study
+m2
+```
+
+Then, for analysis and display of results, the findings can easily be extracted.
+
+```{r}
+m2 %>% 
+	extract_models(which_ones = "h1", tidy = TRUE)
+```
 
